--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,7 @@
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1",
-    "webpack": "^4.25.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
